I deleted constructors and getters that I don't need. In allCourses stream I added .map(Course::getName), so function distinct works well in final output.